@@ -1,5 +1,7 @@
 package ca.frc6390.athena.mechanism.core;
 
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
 
@@ -25,14 +27,14 @@ public record MechanismDefinition(
     public MechanismDefinition {
         name = name == null || name.isBlank() ? "mechanism" : name;
         Objects.requireNonNull(mechanism, "mechanism");
-        children = Map.copyOf(children);
-        states = Map.copyOf(states);
         if (initialState == null && !states.isEmpty()) {
             Map.Entry<String, MechanismState> first = states.entrySet().iterator().next();
             initialStateName = first.getKey();
             initialState = first.getValue();
         }
+        children = Collections.unmodifiableMap(new LinkedHashMap<>(children));
+        states = Collections.unmodifiableMap(new LinkedHashMap<>(states));
         initialStateName = initialStateName == null ? "" : initialStateName;
-        refs = Map.copyOf(refs);
+        refs = Collections.unmodifiableMap(new LinkedHashMap<>(refs));
     }
 }
